# info_collector

./: main.py  setup.spec
activity-analytics-pack/: electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js
activity-analytics-pack-v2/: package.json  sign.js
activity-analytics-pack-v2/native/: binding.gyp  capture_engine.h  ocr_engine.cpp  ocr_engine.h
activity-analytics-pack-v2/scripts/: feature-toggle.js
activity-analytics-pack-v2/src/main/: systemController.ts
activity-analytics-pack-v2/src/main/cloud/: providers.ts
activity-analytics-pack/activity-analytics-pack-v2/: features.json  tsconfig.json
activity-analytics-pack/activity-analytics-pack-v2/native/: capture_engine.cpp  monitor.cpp
activity-analytics-pack/activity-analytics-pack-v2/src/main/: index.ts  pipeServer.ts
activity-analytics-pack/activity-analytics-pack-v2/src/preload/: index.ts
activity-analytics-pack/native/: CMakeLists.txt  monitor.cpp  monitor_hook.cpp  monitor_hook.hpp
activity-analytics-pack/scripts/: copy-worker.js  sign.js
activity-analytics-pack/src/main/: index.ts  pipeServer.ts  systemController.ts
activity-analytics-pack/src/preload/: index.ts
activity-analytics-pack/src/renderer/: index.html  main.js  style.css
activity-analytics-pack/src/worker/: dataWorker.ts
collectors/: app_tracker.py  cpu_monitor.py  disk_monitor.py  memory_monitor.py  system_monitor.py
log/: log_manager.py  logger.py
logging/: log_manager.py
storage/: encryptor.py  key_manager.py  local_database.py
ui/: dashboard.py  login_dialog.py  main.py
(+2 files in other folders)
